# liferea

./: .cvsignore  .eslintrc.js  .gitignore  .glade  .gladep  .organizationmap  .travis.yml  AUTHORS  COPYING  ChangeLog  Dockerfile  Dockerfile.travis  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  feedbag.xpi  liferea-SuSE.spec.in  liferea.1  liferea.appdata.xml.in  liferea.convert  liferea.desktop  liferea.desktop.in  liferea.glade  liferea.schemas  liferea.spec  liferea.spec.in  (+12 more)
data/: meson.build  net.sf.liferea.gschema.xml  net.sourceforge.liferea.desktop.in
data/pixmaps/: AUTHORS
doc/html/: Makefile.am  about_de.html  about_en.html  about_it.html  about_ru.html  concepts_de.html  concepts_en.html  concepts_it.html  concepts_ru.html  enclosures_de.html  enclosures_en.html  enclosures_it.html  enclosures_ru.html  faq_de.html  faq_en.html  faq_it.html  faq_ja.html  folders_de.html  folders_en.html  folders_it.html  greader_de.html  greader_en.html  headlines_de.html  headlines_en.html  headlines_it.html  headlines_ru.html  meson.build  newsbin_de.html  newsbin_en.html  newsbin_it.html  newsbin_ru.html  onlineservices_de.html  onlineservices_en.html  onlineservices_it.html  preferences_de.html  preferences_en.html  preferences_it.html  preferences_ru.html  reference.css  reference_de.html  (+24 more)
glade/: Makefile.am  about.ui  auth.glade  auth.ui  batch_feed_property.ui  bloglines_source.glade  bloglines_source.ui  enclosure_handler.ui  google_source.ui  inoreader_source.ui  liferea.css  liferea.glade  liferea.ui  liferea_menu.ui  liferea_toolbar.ui  mainwindow.ui  mark_read_dialog.ui  meson.build  new_folder.ui  new_newsbin.ui  new_subscription.glade  new_subscription.ui  node_source.glade  node_source.ui  opml_source.glade  opml_source.ui  owncloudnews_source.ui  plugins.ui  prefs.ui  properties.ui  reedah_source.ui  rename_node.ui  search.ui  search_folder.ui  shortcuts.ui  simple_search.ui  simple_subscription.glade  simple_subscription.ui  subscribe.ui.new  theoldreader_source.ui  (+2 more)
opml/: Makefile.am  feedlist.opml  feedlist_bg.opml  feedlist_ca.opml  feedlist_de.opml  feedlist_en.opml  feedlist_es.opml  feedlist_eu.opml  feedlist_fa.opml  feedlist_fr.opml  feedlist_gl.opml  feedlist_he.opml  feedlist_hu.opml  feedlist_id.opml  feedlist_it.opml  feedlist_nl.opml  feedlist_no.opml  feedlist_pl.opml  feedlist_pt.opml  feedlist_pt_BR.opml  feedlist_ru.opml  feedlist_sk.opml  feedlist_sv.opml  feedlist_tr.opml  meson.build
pixmaps/: AUTHORS  Makefile.am  TANGO-LICENSE  available.xpm  directory.xpm  empty.xpm  feedster.xpm  help.xpm  meson.build  ocs.xpm  read.xpm  unavailable.xpm  unread.xpm  vfolder.xpm
pixmaps/16x16/: Makefile.am
pixmaps/22x22/: Makefile.am
pixmaps/24x24/: Makefile.am
pixmaps/32x32/: Makefile.am
pixmaps/48x48/: Makefile.am
pixmaps/scalable/: Makefile.am
resources/: LICENSE  about.ui  auth.ui  google_source.ui  gresource.xml  htmlview.js  i18n-filter.xslt  item.xml.in  liferea_headerbar.ui  liferea_menu.ui  mainwindow.ui  mark_read_dialog.ui  meson.build  new_folder.ui  new_newsbin.ui  new_subscription.ui  node.xml.in  opml_source.ui  prefs.ui  properties.ui  reedah_source.ui  rename_node.ui  search.ui  search_folder.ui  simple_search.ui  simple_subscription.ui  ttrss_source.ui  update_monitor.ui  update_monitor.xml.in
resources/help/: about_it.html  concepts_en.html  concepts_it.html  faq_de.html  faq_ru.html  folders_it.html  folders_ru.html  newsbin_de.html  newsbin_it.html  onlineservices_it.html  onlineservices_ru.html  preferences_de.html  preferences_en.html  preferences_it.html  reference_de.html  reference_en.html  searching_de.html  searching_ru.html  subscriptions_de.html  subscriptions_en.html  subscriptions_it.html  subscriptions_ru.html  topics_de.html  topics_it.html  topics_ru.html  updating_en.html  updating_ru.html
resources/js/: README.md  gopher-renderer.js  htmlview.js
resources/ui/: README.md  about.ui  auth.ui  google_source.ui  gtk-liferea.css  liferea.cmb  liferea.cmb.db  liferea_menu.ui  mainwindow.ui  mark_read_dialog.ui  new_folder.ui  new_newsbin.ui  new_node_source.ui  new_subscription.ui  node_source.ui  opml_source.ui  plugins.ui  prefs.ui  properties.ui  reedah_source.ui  rename_node.ui  search.ui  search_folder.ui  shortcuts.ui  simple_search.ui  simple_subscription.ui  theoldreader_source.ui  ttrss_source.ui  update_monitor.ui  webdav_source.ui
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  atom10.c  atom10_entry.c  atom10_entry.h  atom10_feed.c  atom10_feed.h  attention.c  attention.h  attribs.c  attribs.h  auth.c  auth.h  auth_activatable.c  auth_activatable.h  backend.c  backend.h  bacon-message-connection.c  bacon-message-connection.h  browser.c  browser.h  browser_history.c  browser_history.h  callbacks.c  callbacks.h  cdf_channel.c  cdf_channel.h  cdf_item.c  cdf_item.h  comments.c  comments.h  common.c  common.h  conf.c  conf.h  conversions.c  conversions.h  date.c  (+194 more)
src/.deps/: backend.Po  callbacks.Po  cdf_channel.Po  cdf_item.Po  common.Po  conf.Po  htmlview.Po  interface.Po  main.Po  ns_content.Po  ns_dc.Po  ns_fm.Po  ns_ocs.Po  ns_slash.Po  ocs_dir.Po  rss_channel.Po  rss_item.Po  support.Po  update.Po
src/actions/: Makefile.am  item_actions.c  item_actions.h  link_actions.c  link_actions.h  node_actions.c  node_actions.h  shell_actions.c  shell_actions.h
src/fl_providers/: Makefile.am  fl_common.c  fl_common.h  fl_default.c  fl_default.h  fl_opml-cb.c  fl_opml-cb.h  fl_opml-ui.c  fl_opml.c  fl_opml.glade  fl_opml.gladep  fl_opml.h  fl_plugin-ui.c  fl_plugin-ui.h  fl_plugin.c  fl_plugin.glade  fl_plugin.gladep  fl_plugin.h
src/fl_sources/: .fl_plugin-cb.c  Makefile.am  fl_dummy.c  (+93 more)
xslt/: Makefile.am  feed.xml.in  fl_plugin.xml.in  folder.xml.in  html-extract.xml.in  html5-extract.xml.in  i18n-filter.xslt  item.xml.in  itemset.xml.in  meson.build  newsbin.xml.in  node_source.xml.in  reader.xml.in  source.xml.in  summary.xml.in  vfolder.xml.in
(+470 files in other folders)
