## Process this file with automake to produce Makefile.in

gladedir = $(pkgdatadir)
glade_DATA = liferea.ui \
	     liferea_menu.ui \
	     liferea_toolbar.ui \
	auth.ui \
	new_subscription.ui \
	simple_subscription.ui \
	google_source.ui \
	inoreader_source.ui \
	node_source.ui \
	opml_source.ui \
	prefs.ui \
	reedah_source.ui \
	search_folder.ui \
	ttrss_source.ui \
	theoldreader_source.ui

EXTRA_DIST = \
	$(glade_DATA)
