## Process this file with automake to produce Makefile.in

gladedir = $(pkgdatadir)
glade_DATA = about.ui \
	auth.ui \
	enclosure_handler.ui \
	google_source.ui \
	liferea_menu.ui \
	liferea_toolbar.ui \
	mainwindow.ui \
	mark_read_dialog.ui \
	new_folder.ui \
	new_newsbin.ui \
	new_subscription.ui \
	node_source.ui \
	opml_source.ui \
	prefs.ui \
	properties.ui \
	reedah_source.ui \
	rename_node.ui \
	search_folder.ui \
	search.ui \
	simple_search.ui \
	simple_subscription.ui \
	theoldreader_source.ui \
	ttrss_source.ui \
	update_monitor.ui \
	liferea.css

EXTRA_DIST = \
	$(glade_DATA)
